<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_main">收益宝</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_guide">向导</string>
    <string name="app_name">收益宝</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">领略智慧理财</string>

    <!-- action bar -->
    <string name="refresh">刷新</string>
    <string name="add">新增</string>
    <string name="more">更多</string>
    <string name="actionbar_refresh">刷新</string>
    <string name="actionbar_share">分享</string>
    <string name="actionbar_add">新增</string>
    <string name="actionbar_more">更多</string>
    <string name="actionbar_settings">设置</string>
    <string name="actionbar_guide">使用向导</string>
    <string name="actionbar_history">统计分析</string>
    <string name="actionbar_compare">基金比较</string>
    <string name="actionbar_drink">请我吃饭</string>
    <string name="actionbar_feedback">我要吐槽</string>
    <string name="actionbar_update">检查更新</string>
 
    <!-- 菜单 -->
    <string name="zixuan">自选</string>
    <string name="shouyi">收益</string>
    <string name="quanbu">全部</string>
    <!-- 添加菜单 -->

    <string name="title_activity_zi_xuan">ZiXuanActivity</string>
    <string name="title_activity_fund_info_detail">FundInfoDetailActivity</string>

    <!-- 基金详情 -->
    <string name="fund_history">历史净值</string>
    <string name="fund_info">基金信息</string>
    <string name="title_activity_fund_history">收益历史</string>
    <string name="title_activity_fund_detail">基金信息</string>

    <!-- 下拉刷新 -->
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>

    <!-- 输入金额弹出框 -->
    <string name="prompt_money">金额</string>
    <string name="action_input_sure_short">确认</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_compare">基金比较</string>
    <string name="title_activity_history">历史净值</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_drink">请我吃饭</string>
    <string name="title_activity_feedback">我要吐槽</string>
    <string name="title_activity_update">检查更新</string>
    

</resources>