<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/abc_ab_bottom_solid_dark_holo" >

    <item
        android:id="@+id/actionbar_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/actionbar_refresh"/>
    <!-- 
    <item
        android:id="@+id/actionbar_share"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/actionbar_share"/>
         -->
    <item
        android:id="@+id/actionbar_history"
        android:icon="@drawable/ofm_add_icon"
        android:showAsAction="never"
        android:orderInCategory="10"
        android:title="@string/actionbar_history">
    </item>
    <item
        android:id="@+id/actionbar_compare"
        android:icon="@drawable/ofm_qrcode_icon"
        android:showAsAction="never"
        android:orderInCategory="11"
        android:title="@string/actionbar_compare">
    </item>
    <!--
        <item
            android:id="@+id/actionbar_guide"
            android:icon="@drawable/ofm_qrcode_icon"
            android:title="@string/actionbar_guide"
            android:showAsAction="never">
        </item>      
        <item
            android:id="@+id/actionbar_drink"
            android:icon="@drawable/ofm_qrcode_icon"
            android:title="@string/actionbar_drink"
            android:showAsAction="never">
        </item>
    -->
    <!--
        <item
            android:id="@+id/actionbar_settings"
            android:icon="@drawable/ofm_qrcode_icon"
            android:title="@string/actionbar_settings">
        </item>
    -->
    <item
        android:id="@+id/actionbar_feedback"
        android:icon="@drawable/ofm_qrcode_icon"
        android:showAsAction="never"
        android:orderInCategory="12"
        android:title="@string/actionbar_feedback">
    </item>
    <item
        android:id="@+id/actionbar_update"
        android:icon="@drawable/ofm_qrcode_icon"
        android:showAsAction="never"
        android:orderInCategory="13"
        android:title="@string/actionbar_update">
    </item>

</menu>