<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<LinearLayout
    android:id="@+id/lllayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F5F5F5"
    android:orientation="horizontal" >
    	
        <LinearLayout 
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/guide_round"
            android:layout_width="match_parent" 
    		android:layout_height="wrap_content" 
            >
            <TextView 
                android:padding="10dip"
                android:id="@+id/zixuan"
                android:text="@string/zixuan"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/green"
                android:layout_width="match_parent" 
    			android:layout_height="wrap_content"
                />
            
        </LinearLayout>
        <LinearLayout 
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/guide_round"
            android:clickable="true"
            android:saveEnabled="false"
            android:layout_width="match_parent" 
    		android:layout_height="wrap_content" 
            >
            <TextView 
                android:padding="10dip"
                android:id="@+id/shouyi"
                android:text="@string/shouyi"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_width="match_parent" 
    			android:layout_height="wrap_content"
                />
            
        </LinearLayout>
        <LinearLayout 
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/guide_round"
            android:focusable="false"
            android:layout_width="match_parent" 
    		android:layout_height="wrap_content" 
            >
            <TextView 
                android:padding="10dip"
                android:id="@+id/quanbu"
                android:text="@string/quanbu"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_width="match_parent" 
    			android:layout_height="wrap_content"
                />
            
        </LinearLayout>
    </LinearLayout>
</LinearLayout>